--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Love Story</title>
+    <title>Nezi</title>
 </head>
 <body>
     <header>
-        <h1>❤️ Our Love Story ❤️</h1>
+        <h1>❤️ Ek En My Nezi ❤️</h1>
     </header>
 
     <section class="timeline">
